--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	</head>
 	<body>
 		<header class="site-header">
-			<h1><a href="home.html">Borrowed Thoughts</a></h1>
+			<h1><a href="index.html">Borrowed Thoughts</a></h1>
 			<nav>
-				<a href="home.html">Home</a>
-				<a href="posts.html">All Posts</a>
+				<a href="index.html">Home</a>
+				<a href="posts/index.html">All Posts</a>
 				<button id="theme-toggle" aria-label="Toggle theme">
 					<span class="sun">☀️</span>
 					<span class="moon">🌙</span>
